Fix text overflowing on tooltips

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@ dialog {
   top: 100%;
   translate: -50%;
   scale: var(--scale);
+  min-width: fit-content;
   width: 200%;
   padding: 0.25rem;
   border-radius: 8%;
